# kuiper

./: CMakeLists.txt  README.md  build.sh  copy-assets.cmake  credits.txt  inputs.cpp  kuiper.cpp  ship.cpp  ship.hpp  utils.cpp  utils.hpp
assets/fonts/: LICENSE.txt
assets/textures/krita/: .asteroid32.kra-autosave.kra  aste64.kra  aste64.kra~  asteroid128.kra  asteroid32.kra  asteroid64.kra  debris.kra  laser.kra  ship.kra  ship_thruster.kra
include/: assetsLoader.hpp  inputs.hpp  menu.hpp  utils.hpp  world.hpp
include/entity/: asteroid.hpp  debris.hpp  entity.hpp  laser.hpp  ship.hpp
include/gui/: menu.hpp  menuElements.hpp
src/: assetsLoader.cpp  inputs.cpp  kuiper.cpp  menu.cpp  utils.cpp  world.cpp
src/entity/: asteroid.cpp  debris.cpp  entity.cpp  laser.cpp  ship.cpp
src/gui/: menu.cpp  menuElements.cpp
